--- a/app/src/main/res/layout/activity_user_games.xml
+++ b/app/src/main/res/layout/activity_user_games.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/simple_rose"
-    tools:context=".UserGames">
+    tools:context=".ui.UserGames">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
