--- a/app/src/main/res/layout/holder_layout.xml
+++ b/app/src/main/res/layout/holder_layout.xml
@@ -21,7 +21,7 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/img_view_holder"
+                android:id="@+id/img_games_holder"
                 android:layout_width="0dp"
                 android:layout_height="200dp"
                 android:scaleType="centerCrop"
@@ -31,7 +31,7 @@
                 app:srcCompat="@drawable/street" />
 
             <TextView
-                android:id="@+id/text_view_company_name"
+                android:id="@+id/tv_game_company"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -41,10 +41,10 @@
                 android:textColor="@color/blue_games"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/img_view_holder" />
+                app:layout_constraintTop_toBottomOf="@+id/img_games_holder" />
 
             <TextView
-                android:id="@+id/text_view_game_name"
+                android:id="@+id/tv_game_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -52,11 +52,11 @@
                 android:text="Street Fighter"
                 android:textColor="@color/dark_blue"
                 android:textSize="22sp"
-                app:layout_constraintStart_toStartOf="@+id/text_view_company_name"
-                app:layout_constraintTop_toBottomOf="@+id/text_view_company_name" />
+                app:layout_constraintStart_toStartOf="@+id/tv_game_company"
+                app:layout_constraintTop_toBottomOf="@+id/tv_game_company" />
 
             <TextView
-                android:id="@+id/text_view_description_game"
+                android:id="@+id/tv_desc_game"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -68,8 +68,8 @@
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/text_view_game_name"
-                app:layout_constraintTop_toBottomOf="@+id/text_view_game_name" />
+                app:layout_constraintStart_toStartOf="@+id/tv_game_name"
+                app:layout_constraintTop_toBottomOf="@+id/tv_game_name" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
