--- a/app/src/main/res/layout/activity_new_account.xml
+++ b/app/src/main/res/layout/activity_new_account.xml
@@ -177,26 +177,25 @@
                 app:layout_constraintTop_toBottomOf="@+id/et_birthday" />
 
             <com.google.android.material.slider.Slider
-                android:id="@+id/slider"
+                android:id="@+id/slider_level"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:stepSize="1"
                 android:valueFrom="1"
-                android:valueTo="27"
+                android:valueTo="4"
                 app:layout_constraintEnd_toEndOf="@+id/textView12"
                 app:layout_constraintStart_toStartOf="@+id/textView12"
                 app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
             <TextView
-                android:id="@+id/textView13"
+                android:id="@+id/txt_level"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="46dp"
                 android:fontFamily="serif"
-                android:text="TextView"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="@+id/et_birthday"
-                app:layout_constraintStart_toEndOf="@+id/slider"
+                app:layout_constraintStart_toEndOf="@+id/slider_level"
                 app:layout_constraintTop_toBottomOf="@+id/et_birthday" />
 
             <TextView
@@ -207,8 +206,8 @@
                 android:fontFamily="serif"
                 android:text="@string/your_preference_video_game"
                 android:textSize="18sp"
-                app:layout_constraintStart_toStartOf="@+id/slider"
-                app:layout_constraintTop_toBottomOf="@+id/slider" />
+                app:layout_constraintStart_toStartOf="@+id/slider_level"
+                app:layout_constraintTop_toBottomOf="@+id/slider_level" />
 
             <Spinner
                 android:id="@+id/spn_console"
